# animaya

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  DASHBOARD.md  ISSUES.md  PLAN.md  README.md  pyproject.toml  run.sh
.planning/: FROZEN.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: MILESTONES.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.playwright-mcp/: page-2026-04-16T07-00-31-100Z.yml  page-2026-04-16T07-01-08-044Z.yml  page-2026-04-16T07-01-19-216Z.yml  page-2026-04-16T07-01-58-519Z.yml
bot/: __main__.py  claude_query.py  config.py  events.py  lang.py  main.py
dashboard/: .gitignore  DASHBOARD.md  auth.config.ts  auth.ts  bunfig.toml  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
docker/: Dockerfile.bot  docker-compose.yml  start.sh
docs/: MODULE_AUTHORING.md
scripts/: _snap.mjs  deploy.sh  e2e-debug.sh  reset-dev.sh  setup.sh
shared/: models.py
systemd/: animaya.service
tests/: conftest.py  test_bridge.py  test_bridge_locale_flow.py  test_claude_query_bootstrap.py  test_config.py  test_formatting.py  test_handle_start_i18n.py  test_i18n.py  test_install.py  test_lang.py  test_main_boot.py  test_skeleton.py  test_telegram_bridge.py
(+422 files in other folders)
